--- a/templates/settings.html
+++ b/templates/settings.html
@@ -29,6 +29,10 @@
                 <label for="cooldown_time" class="form-label">Cooldown Time (seconds)</label>
                 <input type="number" class="form-control" id="cooldown_time" name="cooldown_time" min="1" placeholder="e.g., 10">
             </div>
+            <div class="mb-3">
+                <label for="team_number" class="form-label">Team Number</label>
+                <input type="text" class="form-control" id="team_number" name="team_number" min="1" placeholder="e.g., 5987, 0254">
+            </div>
 
             <button type="submit" class="btn btn-primary">Save Settings</button>
         </form>
